finish distortion effect. begin work on render bug

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -118,10 +118,10 @@ text {
 }
 
 #instructions {
-  position: absolute;
+  position: fixed;
   display: block;
-  width: 1900px;
-  height: 1500px;
+  width: 100%;
+  height: auto;
   margin: auto;
 }
 
